<resources>
    <string name="app_name">BurnAndEarn</string>
    <string name="preference">preference</string>
    <string name="how_its_works_learned">is_how_it_works_learned</string>
    <string name="connect_with_facebook">Login With Facebook</string>
    <string name="client_id">XJ80L8iWntcmoPYjNn8bRGaCJKWvF8ZG</string>
    <string name="secret_id">7jb_1APE0Q1PzZQ4KiFxiK8a85VC9W512e0uMKA969hUg82HvTTwd16ubcWAWZxB</string>
    <string name="facebook_app_id">994703893899145</string>
    <string name="auth_scope">activity</string>
    <string name="redirect_uri">http://pluggdd.com/</string>
    <string name="is_user_logged_in">is_user_logged_in</string>
    <string name="tag">tag</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email">Email</string>
    <string name="profile_image_url">profile_image_url</string>
    <string name="no_network">No Internet Connection</string>
    <string name="user_id">user_id</string>
    <string name="burn_and_earn">EARN WHEN YOU BURN!</string>
    <string name="google_plus_login">Login with Google</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="page_flag">page_flag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_transition">image_transition</string>
    <string name="conditions_apply">*conditions apply</string>
    <string name="redeem">REDEEM</string>
    <string name="calories">cal</string>
    <string name="action_settings">Settings</string>
    <string name="activity_selection">Activity selection</string>
    <string name="action_offers_and_rewards">Offers And Rewards</string>
    <string name="action_how_it_works">How It Works</string>
    <string name="action_about_us">About Us</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="button_pressed">button_pressed</string>
    <string name="social_login">social login</string>
    <string name="quit_app">quit</string>
    <string name="my_offers">My Offers</string>
    <string name="how_it_works">How It Works</string>
    <string name="burn_calories">BURN CALORIES</string>
    <string name="earn_points">EARN POINTS</string>
    <string name="redeem_points">REDEEM POINTS</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="get_accounts_permission_rationale">Account details is used as part of the Google Fit API</string>
    <string name="ok">Ok</string>
    <string name="permission_denied_explanation">Permissions was denied, but is needed for core functionality</string>
    <string name="settings">Settings</string>
    <string name="distance_dimension">km</string>
    <string name="steps">steps</string>
    <string name="steps_text">Steps</string>
    <string name="app_tour1_text_header">GET REWARDED TO BE ACTIVE</string>
    <string name="app_tour1_content_text">Earn SweatPoints for every calorie that you burn while being active.Use your earned \'SweatPoints\' to get awesome deals and discounts.</string>
    <string name="app_tour2_text_header">AUTOMATED ACTIVITY DETECTION</string>
    <string name="app_tour2_content_text">Burn&amp;Earn works with Google Fit and FitBit to automatically track your activities and determine the amount of calories burnt.</string>
    <string name="app_tour3_text_header">GET REWARDS THAT SUIT YOU</string>
    <string name="app_tour3_content_text">Chose from a long list of places and business, where you can redeem your \'SweatPoints\', ranging from apparels, fitness products, wine and dine, travel and a lot more.</string>
    <string name="is_how_its_works_learned">how_it_works_learned</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_total_points">Your total earned points are now</string>
    <string name="grap_now">GRAB NOW</string>
    <string name="calories_burnt">You have burnt</string>
    <string name="calories_unit">Calories</string>
    <string name="distance_travelled">You have covered</string>
    <string name="steps_taken">You have taken</string>
    <string name="terms_and_conditions">Terms And Conditions*</string>
    <string name="no_offer">Business offer does not exists now</string>
    <string name="motivation_and_objective">Motivation and Objective</string>
    <string name="motivation_and_objective_data">An app that is designed and aimed at creating a sustainable ecosystem for drive health an fitness among users all across the board.</string>
    <string name="how_it_helps">How does it work?</string>
    <string name="why_how_it_helps_data">The app automatically detects the number of calories burnt using either Google Fit or FitBit (based on your choice). You do not have to worry about switching on/off our app to be able to accurately determine the number of calories burnt.\n\nThe total number of calories burnt are rewarded with SweatPoints. Accumulate SweatPoints to redeem them across a variety of offers and discounts from our partners.\n\nBe healthy and be rewarded to be healthy!</string>
    <string name="about_us_footer">So go, burn your calories, while we run around and gather things that you love!</string>
    <string name="we_are_there_for_you">We are there for you!</string>
    <string name="let_us_know_how_we_can_help">Let us know how can we help. If you have a request for a special offer, let us know and we shall try to curate it</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_feedback_request">Feedback / Request</string>
    <string name="send">SEND</string>
    <string name="logo_url">logo_url</string>
    <string name="business_name">business_name</string>
    <string name="offer_name">offer_name</string>
    <string name="offer_promo">offer_rpomo</string>
    <string name="how_to_redeem">how to redeem</string>
    <string name="coupon">Coupon</string>
    <string name="redirect">REDIRECT</string>
    <string name="cancel">CANCEL</string>
    <string name="coupon_expiry_date">Coupon expiry date</string>
    <string name="redirect_url">redirect url</string>
    <string name="share">Share</string>
    <string name="share_and_earn">Help your friends and family use the app as well!\n\nShare our app on your Facebook page and we shall automatically add 500 SweatPoints to your account</string>
    <string name="facebook_share">Share with Facebook</string>
    <string name="goal_set_up_header">HANG ON !!! We need some additional information</string>
    <string name="choose_your_age_group">Choose your age group</string>
    <string name="choose_your_goal">Choose your goal</string>
    <string name="submit">SUBMIT</string>
    <string name="is_goal_set">is goal set finished</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="title_activity_initial_set_up">InitialSetUpActivity</string>
    <string name="title_activity_offer_and_rewards">OfferandRewards</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="action_home">Home</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_dob">yyyy-mm-dd</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">gender</string>
    <string name="hint_email">email</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="facebookId">FacebookID</string>
    <string name="gcm_SenderId">322102541933</string>
    <string name="gcm_reg_id">GCM Registration Id</string>
    <string name="is_gcm_token_updated">is GCM token sent to server</string>
    <string name="user_goal">User goal</string>
    <string name="start_time">StartTime</string>
    <string name="last_updated_calories_time">last updated calores time</string>
    <string name="calories_goal">calories goal</string>
    <string name="points_earned">Total SweatPoints</string>
    <string name="points">points</string>
    <string name="points_txt">POINTS</string>
    <string name="no_offers">Currently, you do not have any offers to avail. You may want to burn a few more calories to accumulate SweatPoints</string>
    <string name="no_business_offer">Burn More Calories To Avail Offers</string>
    <string name="business_id">businessId</string>
    <string name="half_way_goal_achieved_notification_header">Congratulations, you have reached the halfway mark to your goal</string>
    <string name="goal_achieved_notification_content">Congratulations, you have completed the goal for today</string>
    <string name="from_notification">From Notification</string>
    <string name="notification_time">notify time</string>
    <string name="title_activity_my_offers">My Offers</string>
    <string name="my_offers_inactive">My Offers Inactive</string>
    <string name="city">City</string>
    <string name="hint_city">city</string>
    <string name="hint_company">company</string>
    <string name="company">Company</string>
    <string name="city_id">City Id</string>
    <string name="fontello_clock">&#xE800;</string>
    <string name="fontello_phone">&#xE802;</string>
    <string name="fontello_location">&#xE801;</string>
    <string name="fontello_height">&#xE803;</string>
    <string name="fontello_calendar">&#xE804;</string>
    <string name="fontello_weight">&#xE805;</string>
    <string name="fontello_male">&#xE80A;</string>
    <string name="fontello_female">&#xE80C;</string>
    <string name="fontello_envelope">&#xE806;</string>
    <string name="fontello_blood">&#xE807;</string>
    <string name="fontello_occupation">&#xE808;</string>
    <string name="fontello_sex">&#xE809;</string>
    <string name="fontello_instution_name">&#xE80D;</string>
    <string name="fontello_school_college">&#xE80F;</string>
    <string name="fontello_government">&#xE80E;</string>
    <string name="fontello_company">&#xE810;</string>
    <string name="fontello_company_employees">&#xE811;</string>
    <string name="fontello_business_unit">&#xE812;</string>
    <string name="fontello_department">&#xE813;</string>
    <string name="fontello_social">&#xE816;</string>
    <string name="fontello_camera">&#xE815;</string>
    <string name="fontello_name">&#xE814;</string>
    <string name="fontello_goal">&#xE817;</string>
    <string name="fontello_cart">&#xE818;</string>
    <string name="fontello_mobile">&#xE819;</string>
    <string name="fontello_address">&#xE81a;</string>
    <string name="ends_in">ENDS IN</string>
    <string name="days">DAYS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="hours">HOURS</string>
    <string name="no_image">Image Not Available</string>
    <string name="valid_till">VALID TILL : </string>
    <string name="terms_and_conditions_label">TERMS AND CONDITIONS</string>
    <string name="points_needed">points_needed</string>
    <string name="address">address</string>
    <string name="expire_date">expire_date</string>
    <string name="offer_image_url">Offer Image Url</string>
    <string name="activity_image_transition">image transition</string>
    <string name="activity_logo_transition">logo transition</string>
    <string name="activity_points_needed_transition">points_needed_transition</string>
    <string name="delivery">Delivery Details</string>
    <string name="deliver">Deliver</string>
    <string name="hint_phone">Mobile Number</string>
    <string name="hint_address">Address</string>
</resources>