<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="28dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:background="@color/blue"
    tools:context="com.pluggdd.burnandearn.view.fragment.ContactUsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle_logo"
        android:layout_gravity="center"/>

    <com.pluggdd.burnandearn.font.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_set_up_header"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        />

    <com.pluggdd.burnandearn.font.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"/>

    </RadioGroup>


    <com.pluggdd.burnandearn.font.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_age_group"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

    <Spinner
        android:id="@+id/spinner_age_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/age_group"
        android:layout_marginTop="10dp"
        >

    </Spinner>

    <com.pluggdd.burnandearn.font.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_goal"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

    <Spinner
        android:id="@+id/spinner_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/goal_setup"
        android:layout_marginTop="10dp">

    </Spinner>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:minHeight="30dp"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp"
        android:text="@string/submit"
        android:textSize="18sp" />




</LinearLayout>
