<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:padding="10dp">

                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_collapseMode="parallax" />

                    <ProgressBar
                        android:id="@+id/loading_progress_bar"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="visible" />

                </FrameLayout>

                <EditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:gravity="center"
                    android:hint="@string/hint_first_name"
                    android:minWidth="200dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:gravity="center"
                    android:hint="@string/hint_last_name"
                    android:minWidth="200dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />


            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:context="com.pluggdd.burnandearn.view.fragment.ContactUsFragment">

            <!--<com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/goal_set_up_header"
                android:textColor="@android:color/white"
                android:textSize="20sp" />-->

            <com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />


            <com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dob"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edt_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/hint_dob"
                android:singleLine="true"
                android:textColor="@android:color/white" />


            <com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sex"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/male"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rbtn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rbtn_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/other"
                    android:textColor="@android:color/white" />

            </RadioGroup>


            <!--<com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/choose_your_age_group"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_age_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/age_group">

            </Spinner>-->

            <com.pluggdd.burnandearn.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/choose_your_goal"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/goal_setup">

            </Spinner>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/orange"
                android:minHeight="30dp"
                android:paddingBottom="5dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="5dp"
                android:text="@string/submit"
                android:textSize="18sp" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>



